Finished making hero area

--- a/index.html
+++ b/index.html
@@ -23,5 +23,20 @@
         </div>
     </div>
     
+    <div id="hero-container">
+        <div class="hero-item">
+            <h1 id="hero-bigtext"><b>This website is awesome</b></h1>
+            <p id="hero-paragraph">This website has some subtext that goes here under the main title. It's smaller and the color is lower contrast.</p>
+            <button id="hero-button"><b>Sign up</b></button>
+        </div>
+        <div class="hero-item">
+            <p id="hero-placeholder">this is a placeholder for an image</p>
+        </div>
+
+
+    </div>
+
+
+
 </body>
 </html>
