Added information header, with four image placeholders and their subtexts

--- a/index.html
+++ b/index.html
@@ -33,6 +33,30 @@
             <p id="hero-placeholder">this is a placeholder for an image</p>
         </div>
 
+    </div>
+
+    <div id="randominfo-container">
+        <div id="randominfo"><h2> Some random information </h2></div>
+        <div id="four-illustrations">
+            <div class="illustrations">
+                <div class="illus-box"></div>
+                <p class="illus_subtext">this is some subtext under an illustration or image</p>
+            </div>
+            <div class="illustrations">
+                <div class="illus-box"></div>
+                <p class="illus_subtext">this is some subtext under an illustration or image</p>
+            </div>
+            <div class="illustrations">
+                <div class="illus-box"></div>
+                <p class="illus_subtext">this is some subtext under an illustration or image</p>
+            </div>
+            <div class="illustrations">
+                <div class="illus-box"></div>
+                <p class="illus_subtext">this is some subtext under an illustration or image</p>
+            </div>
+        </div>
+
+
 
     </div>
 
