Added a call to action and a footer

--- a/index.html
+++ b/index.html
@@ -56,11 +56,34 @@
             </div>
         </div>
 
+    </div>
+
+    <div id="quote-container">
+        <div id="quote"><p><i>This is an inspiring quotem or a testimonial from a customer Maybe it's just filling up space, or maybe people will actually read it. Who knows? All i know is that it looks nice.</i></p></div>
+        <p id="quote-author"><b>-Thor, God of Thunder</b></p>
+    </div>
+
+    <div id="action-container">
+        <div id="action-subcontainer">
+            <div class="action-item">
+                <div id="action-call">
+                    <h3>Call of action! It's time!</h3>
+                </div>
+                <div id="action-subtext">
+                    <p>Sign up for our product by clicking that button right over there!</p>
+                </div>
+            </div>
+            <div class="action-item">
+            <button id="action-button">Sign up</button>     
+            </div>
+        </div>
 
 
     </div>
 
-
-
+    
 </body>
+<footer>
+    <p>Copyright © The Odin Project 2021</p>
+</footer>
 </html>
